# astra-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Claude-Code-Deep-Dive-Analysis.docx
src/astra/: __init__.py  __main__.py  cli.py  commands.py  config.py  hooks.py  types.py
src/astra/agent/: compaction.py  context.py  engine.py  query.py  repomap.py
src/astra/mcp/: bridge.py  client.py  config.py
src/astra/memory/: prompt.py  store.py  types.py
src/astra/permissions/: checker.py
src/astra/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
src/astra/session/: storage.py  usage.py
src/astra/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  web_fetch.py  web_search.py
src/astra/ui/: console.py
tests/: test_runtime.py
