[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-agent"
version = "0.1.0"
description = "AI coding agent inspired by production agent architectures"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "mcp>=1.0",
    "python-frontmatter>=1.1",
    "pathspec>=0.12",
]

[project.scripts]
astra = "astra.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = ["reference"]
